# src/modules/posts/application/dtos/change-slug-post.dot.ts
@@ -1,0 +1,3 @@
+export class ChangeSlugDto {
+  slug: string;
+}
